# CmakeTemplate

./: CMakeLists.txt  main.cpp
